[MSE] Seeks into buffered ranges will never complete. https://bugs.webkit.org/show_bug.cgi?id=131717

Reviewed by Eric Carlson.

Source/WebCore:
Test: media/media-source/media-source-seek-complete.html

Run the SourceBuffer Monitoring step after initiating a seek.

* Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::sourceBufferPrivateSeekToTime):

LayoutTests:
* media/media-source/media-source-seek-complete-expected.txt: Added.
* media/media-source/media-source-seek-complete.html: Added.


Canonical link: https://commits.webkit.org/149783@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167349 268f45cc-cd09-0410-ab3c-d52691b4dbfc